Downgraded rake to avoid problem in 0.9.0, configured themenap to remove CSRF meta tags from layout, fixing the logout-on-delete bug

--- a/app/views/layouts/ada.html.erb
+++ b/app/views/layouts/ada.html.erb
@@ -4,10 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
 <meta charset="UTF-8">
 <title>ADA Users <%= yield :title %></title>
-<!-- Include this BEFORE the body to ensure older browsers can read new html5 elements --><script src="http://test.ada.edu.au/javascripts/modernizr-1.5.min.js?1305704203" type="text/javascript"></script><link href="http://test.ada.edu.au/stylesheets/import.css?1305704203" media="screen" rel="stylesheet" type="text/css">
-<link href="http://test.ada.edu.au/stylesheets/theme.css?1305704203" media="screen" rel="stylesheet" type="text/css">
-<meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="U/Zp+T4wZgaCzQhfcycq5hLtNH+WxXEb6myr0GQsbps="><%= render "layouts/includes" %></head>
+<!-- Include this BEFORE the body to ensure older browsers can read new html5 elements --><script src="http://test.ada.edu.au/javascripts/modernizr-1.5.min.js?1306311081" type="text/javascript"></script><link href="http://test.ada.edu.au/stylesheets/import.css?1306311081" media="screen" rel="stylesheet" type="text/css">
+<link href="http://test.ada.edu.au/stylesheets/theme.css?1306311081" media="screen" rel="stylesheet" type="text/css"><%= render "layouts/includes" %></head>
 <body class="default" id="social_science">
 		<header><div class="login"><%= render "layouts/login" %></div>
 			
@@ -66,14 +64,15 @@
 </div>
 		<footer><p>General Enquiries: <a href="http://test.ada.edu.au/#">assda@anu.edu.au</a></p>
 		  <p>Web Enquiries: <a href="http://test.ada.edu.au/#">webmaster@assda.anu.edu.au</a></p>
-		  <p> <em>Deployed 1b2cea5ff00cd4f96720789b3830181722bbf9d9 at 2011-05-18 05:36
+		  <p> <em>Deployed e004e916807e35236f113ae7be2c6f9f25d5fa2d at 2011-05-25 06:11
 </em></p>
 		  <p> &#169; Australian Data Archive</p>
-      <p><em>Deployed 1b2cea5ff00cd4f96720789b3830181722bbf9d9 at 2011-05-18 05:36
+      <p><em>Deployed e004e916807e35236f113ae7be2c6f9f25d5fa2d at 2011-05-25 06:11
 </em></p>
+			<p><img alt="Feed" src="http://test.ada.edu.au/images/icons/feed.png?1306311081"><a rel="feed" type="application/rss+xml" title="ADA Atom Feed" href="http://test.ada.edu.au/ada-atom-feed.atom?format=xml">ADA Atom Feed</a> </p>
     </footer></section>
 </body>
-<script src="http://test.ada.edu.au/javascripts/jquery.min.js?1305704203" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/rails.js?1305704203" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/jquery.effects.core.js?1305704203" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/scripts.js?1305704203" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/application.js?1305704203" type="text/javascript"></script><script type="text/javascript">
+<script src="http://test.ada.edu.au/javascripts/jquery.min.js?1306311081" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/rails.js?1306311081" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/jquery.effects.core.js?1306311081" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/scripts.js?1306311081" type="text/javascript"></script><script src="http://test.ada.edu.au/javascripts/application.js?1306311081" type="text/javascript"></script><script type="text/javascript">
       $(document).ready(function(){
       
      });
